--- a/.github/workflows/wake-up-jules.yml
+++ b/.github/workflows/wake-up-jules.yml
@@ -5,18 +5,17 @@ on:
 
 jobs:
   activate-jules:
-    # Trigger only when the specific 'Ready' label is added
+    # Only run if the label added was specifically 'Ready'
     if: github.event.label.name == 'Ready'
     runs-on: ubuntu-latest
     permissions:
       issues: write
     steps:
-      - name: Activate and Assign
+      - name: Activate, Assign, and Cleanup
         uses: actions/github-script@v7
         with:
           script: |
-            // 1. Add 'Jules' label to wake up the agent
-            // Using "Jules" (Capitalized) to match your screenshot
+            // 1. Add 'Jules' label
             await github.rest.issues.addLabels({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -24,10 +23,22 @@ jobs:
               labels: ['Jules']
             });
 
-            // 2. Assign YOU (The trigger-er)
+            // 2. Assign YOU
             await github.rest.issues.addAssignees({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
               assignees: [context.actor]
             });
+
+            // 3. CLEANUP: Remove 'Backlog' label
+            try {
+              await github.rest.issues.removeLabel({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                name: 'Backlog'
+              });
+            } catch (e) {
+              // Ignore error if 'Backlog' wasn't there
+            }
