--- a/.github/workflows/update-status.yml
+++ b/.github/workflows/update-status.yml
@@ -5,73 +5,66 @@ on:
 
 jobs:
   update-status:
-    # Only run if the comment comes from the Jules Bot
     if: contains(github.event.comment.user.login, 'jules')
     runs-on: ubuntu-latest
     permissions:
       issues: write
     steps:
-      - name: Update Label based on Context
+      - name: Update Label and Cleanup
         uses: actions/github-script@v7
         with:
           script: |
             const body = context.payload.comment.body.toLowerCase();
+            const labelsToRemove = ['Backlog', 'Ready', 'In Progress', 'For Review'];
             
-            // Define the labels
-            const readyLabel = 'Ready';
-            const progressLabel = 'In Progress';
-            const reviewLabel = 'For Review';
+            // Helper function to remove a list of labels
+            async function removeOldLabels(names) {
+              for (const name of names) {
+                try {
+                  await github.rest.issues.removeLabel({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    issue_number: context.issue.number,
+                    name: name
+                  });
+                } catch (e) {} // Ignore if missing
+              }
+            }
 
-            // 1. CHECK: Did Jules open a PR?
-            // He usually says "created a pull request" or links to a PR.
+            // SCENARIO 1: Jules opened a PR -> Move to 'For Review'
             if (body.includes('pull request') || body.includes('/pull/')) {
+              // Remove everything that isn't 'Done'
+              await removeOldLabels(labelsToRemove);
               
-              // Remove 'In Progress' or 'Ready'
-              try {
-                await github.rest.issues.removeLabel({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: context.issue.number,
-                  name: progressLabel
-                });
-                await github.rest.issues.removeLabel({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: context.issue.number,
-                  name: readyLabel
-                });
-              } catch (e) {} // Ignore missing labels
-
               // Add 'For Review'
               await github.rest.issues.addLabels({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.issue.number,
-                labels: [reviewLabel]
+                labels: ['For Review']
               });
-
             } 
-            // 2. CHECK: Is he just starting/chatting?
+            
+            // SCENARIO 2: Jules is just working -> Move to 'In Progress'
             else {
-              // If it's already "For Review", don't move it back to "In Progress"
-              // Only move it if we are coming from "Ready"
-              
-              // Add 'In Progress'
-              // (GitHub is smart enough not to add duplicates if it's already there)
-              await github.rest.issues.addLabels({
+              // Check if it's ALREADY 'For Review' (don't downgrade it)
+              const { data: issue } = await github.rest.issues.get({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: context.issue.number,
-                labels: [progressLabel]
+                issue_number: context.issue.number
               });
+              const isReview = issue.labels.some(l => l.name === 'For Review');
 
-              // Remove 'Ready'
-              try {
-                await github.rest.issues.removeLabel({
+              if (!isReview) {
+                // Remove 'Backlog' and 'Ready'
+                await removeOldLabels(['Backlog', 'Ready']);
+
+                // Add 'In Progress'
+                await github.rest.issues.addLabels({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                   issue_number: context.issue.number,
-                  name: readyLabel
+                  labels: ['In Progress']
                 });
-              } catch (e) {}
+              }
             }
