--- a/.github/workflows/wake-up-jules.yml
+++ b/.github/workflows/wake-up-jules.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   activate-jules:
-    # 1. Trigger ONLY when the 'Ready' label is added
+    # Trigger only when the 'Ready' label is added
     if: github.event.label.name == 'Ready'
     runs-on: ubuntu-latest
     permissions:
@@ -15,8 +15,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            // 2. Add the OFFICIAL lowercase 'Jules' label
-            // The bot listens best to strict lowercase.
+            // 1. Add 'Jules' label (Capitalized as requested)
             await github.rest.issues.addLabels({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -24,7 +23,7 @@ jobs:
               labels: ['Jules']
             });
 
-            // 3. Assign YOU (The trigger-er)
+            // 2. Assign YOU
             await github.rest.issues.addAssignees({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -32,14 +31,18 @@ jobs:
               assignees: [context.actor]
             });
 
-            // 4. CLEANUP: Remove 'Backlog' label if it exists
-            try {
-              await github.rest.issues.removeLabel({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                name: 'Backlog'
-              });
-            } catch (e) {
-              // Ignore if 'Backlog' wasn't there
+            // 3. CLEANUP: Remove 'Backlog' AND 'Ready' immediately
+            // This ensures the issue doesn't have conflicting status labels
+            const labelsToRemove = ['Backlog', 'Ready'];
+            for (const label of labelsToRemove) {
+              try {
+                await github.rest.issues.removeLabel({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: context.issue.number,
+                  name: label
+                });
+              } catch (e) {
+                // Ignore if label wasn't there
+              }
             }
